--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.anglingiq.materialdemo"
+        applicationId "com.pamithor.materialdemo"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -29,5 +29,5 @@ dependencies {
     compile 'com.android.support:palette-v7:22.2.0'
 
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.facebook.fresco:fresco:0.7.0'
 }
